# GES-Voxel-Docker

./: .dockerignore  .gitignore  README.md  TODO.md  run_build.sh
docker-compose/: fast-lio_compose.yml
dockerfile/: fast-lio.Dockerfile
docs/: direct_primitive_reset_note.md  direct_primitive_validation_plan.md
results/context_refinement/: comparison.csv  summary.md
results/context_refinement/runs/context_asymmetry/: interesting_voxels.csv  summary.txt  voxel_metrics.csv
results/context_refinement/runs/context_face_support/: interesting_voxels.csv  summary.txt
results/context_refinement/runs/context_hybrid/: interesting_voxels.csv  summary.txt
results/context_refinement/runs/context_normal_variation/: interesting_voxels.csv  summary.txt
results/context_refinement/runs/nonplanar_priority/: interesting_voxels.csv  summary.txt
results/context_refinement_scored/: junction_mixed_scored_comparison.csv  junction_mixed_scored_summary.md
results/context_refinement_scored_calibration/: relabeled_voxel_review.csv  relabeled_voxel_review.md  scored_calibration_comparison.csv  scored_calibration_summary.md
results/context_refinement_scored_multiscene_review/: cross_scene_summary.csv  cross_scene_summary.md
results/context_refinement_scored_multiscene_review/scenes/full0/: annotation_template.csv  annotation_template.md  relabeled_review_summary.csv  scene_summary.md
results/context_refinement_scored_multiscene_review/scenes/full153/: annotation_template.csv  annotation_template.md  relabeled_review_summary.csv  relabeled_review_summary.md  scene_summary.md
results/context_refinement_scored_review/: relabeled_review_summary.md
results/direct_primitive_validation/full0_stage1/: selected_voxels.csv  summary.md  voxel_comparison.csv
results/direct_primitive_validation/full0_stage2_quickcheck/: loaded_files.txt  registration_quickcheck.csv  selected_cases.csv  summary.md  voxel_comparison.csv  voxel_comparison_normalized.csv
results/final_manual_review_package/: annotation_template.csv  decision_template.md  final_review_instructions.md  review_index.md
results/final_manual_review_package/source/: scene_selection.csv  scene_selection.md
results/parameter_sweep/: mode_comparison.csv  summary.md  sweep_summary.csv
results/test_cpp_abs/: interesting_voxels.csv  voxel_metrics.csv
results/test_cpp_abs/interesting_voxels/: rank_10_vx_4_vy_-1_vz_-1.pcd  rank_11_vx_-1_vy_-11_vz_8.pcd  rank_15_vx_-10_vy_-5_vz_8.pcd  rank_19_vx_-5_vy_11_vz_3.pcd  rank_25_vx_2_vy_6_vz_-2.pcd  rank_28_vx_6_vy_-4_vz_2.pcd  rank_9_vx_6_vy_3_vz_2.pcd
results/test_py_abs/full0/: interesting_voxels.csv  summary.txt  voxel_metrics.csv
results/voxel_morphology/full0/: interesting_voxels.csv  loaded_files.txt  summary.txt  voxel_metrics.csv
results/voxel_morphology_cpp/full0/: summary.txt
results/voxel_morphology_python_fallback/full0/: voxel_metrics.csv
scripts/: bootstrap_fastlio_deps.sh  build_final_manual_review_package.py  build_offline.sh  run_context_refinement.py  run_direct_primitive_validation.py  run_junction_mixed_reclassification.py  run_junction_mixed_scored_calibration.py  run_junction_mixed_scored_multiscene_review.py  run_junction_mixed_scored_review.py  run_parameter_sweep.py  run_voxel_morphology.sh  voxel_morphology_fallback.py
src/ges_voxel_mapping/: CMakeLists.txt  README.md  package.xml
src/ges_voxel_mapping/config/: voxel_morphology.yaml
src/ges_voxel_mapping/include/ges_voxel_mapping/: direct_primitive_validation.hpp  voxel_analysis.hpp
src/ges_voxel_mapping/launch/: voxel_morphology.launch
src/ges_voxel_mapping/src/: direct_primitive_validation.cpp  voxel_analysis.cpp  voxel_morphology_main.cpp  voxel_primitive_comparison_main.cpp
(+358 files in other folders)
