<?xml version="1.0"?>
<package format="2">
  <name>ges_voxel_mapping</name>
  <version>0.1.0</version>
  <description>Offline-first voxel morphology and GES/GND-style surface primitive experiments for LiDAR mapping.</description>

  <maintainer email="chani@example.com">chani</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libyaml-cpp-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>libyaml-cpp-dev</build_export_depend>
  <build_export_depend>libeigen3-dev</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>libyaml-cpp-dev</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>

  <export/>
</package>
